llvm/test/tools/llubi/poison.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define i32 @main(i32 %argc, ptr %argv) {
  ret i32 poison
}
; CHECK: Entering function: main
; CHECK-NEXT:   i32 %argc = i32 1
; CHECK-NEXT:   ptr %argv = ptr 0x8 [argv]
; CHECK-NEXT:   ret i32 poison
; CHECK-NEXT: Exiting function: main
; CHECK-NEXT: error: Execution of function 'main' resulted in poison return value.
